ajouter swagger de authentification et modifier diagramme de classe
